--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
 	"license": "MIT",
 	"dependencies": {
 		"react-router-dom": "^6.11.1"
+	},
+	"devDependencies": {
+		"node-sass": "^8.0.0"
 	}
 }
